# ultrawrapper

./: LICENSE  README.md  pyproject.toml  requirements.txt
tests/: test_vision_yolo.py
vision/: __init__.py
vision/yolo/: __init__.py  augmentations.py  benchmarks.py  dataframe.py  datasets.py  devices.py  export.py  infer.py  memory.py  metrics.py  plotting.py  serialization.py  track.py  train.py  utils.py  video.py
vision/yolo/annotations/: __init__.py  coco.py  convert.py  internal.py  labelme.py  roboflow.py  voc.py  yolo.py
vision/yolo/notebooks/: 01_detection.ipynb  02_segmentation.ipynb  03_pose.ipynb  04_tracking.ipynb  05_training.ipynb  06_augmentations.ipynb  07_export.ipynb  08_annotation_conversion.ipynb  09_video_processing.ipynb
vision/yolo/notebooks/outputs/: 09_predictions.parquet  09_video_predictions.parquet
